<resources>
    <string name="app_name">BMI_Calculator</string>
    <string name="overweight">You are overweight</string>
    <string name="underweight">You are underweight</string>
    <string name="normal">You are Normal</string>
    <string name="bmi_23">BMI : 23</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_height_in_inch">Enter height in inch</string>
    <string name="enter_height_in_ft">Enter height in ft</string>
    <string name="enter_weight_in_kg">Enter Weight in kg</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>


</resources>